<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.csc214.brager_project03.View.LoggedInActivities.EditProfileActivity"
    tools:showIn="@layout/app_bar_edit_profile">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <include layout="@layout/profile_view" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="1dp"
                android:layout_height="wrap_content"
                android:layout_weight=".5"
                android:orientation="vertical"
                android:gravity="center"
                android:layout_margin="16dp">

                <ImageView
                    android:id="@+id/profile_pic_image_view"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:layout_margin="5dp"
                    android:src="@drawable/orca"/>

                <Button
                    android:id="@+id/update_profile_pic_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:text="@string/action_update_profile_picture" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="1dp"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:layout_weight=".5"
                android:gravity="center_vertical"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/first_name_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:hint="@string/prompt_first_name"
                    android:maxLines="1" />

                <EditText
                    android:id="@+id/last_name_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:hint="@string/prompt_last_name"
                    android:maxLines="1" />

                <EditText
                    android:id="@+id/hometown_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:hint="@string/prompt_hometown"
                    android:maxLines="1" />

                <EditText
                    android:id="@+id/birth_date_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:hint="@string/prompt_birth_Date"
                    android:maxLines="1" />

            </LinearLayout>

        </LinearLayout>

        <EditText
            android:id="@+id/bio_edit_text"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_margin="16dp"
            android:background="@drawable/edit_text_border"
            android:gravity="top"
            android:hint="@string/prompt_bio"
            android:padding="10dp"
            android:scrollbars="vertical" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <!-- Save changes will save the changes and stay in the same activity-->
            <Button
                android:id="@+id/save_changes_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_margin="16dp"
                android:text="@string/action_save_changes" />
            <!-- Cancel will return editTexts and profile to how they were when the
            activity opened. If the back button is pressed, the same will occur-->
            <Button
                android:id="@+id/cancel_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_margin="16dp"
                android:text="@string/action_cancel" />
        </RelativeLayout>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>
