<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="1dp"
                android:layout_height="wrap_content"
                android:layout_weight=".4">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:gravity="center">

                    <ImageView
                        android:id="@+id/profile_pic_image_view"
                        android:layout_width="125dp"
                        android:layout_height="125dp"
                        android:layout_margin="5dp"
                        android:src="@drawable/orca"/>

                    <ImageView
                        android:id="@+id/profile_favorite_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:layout_alignParentEnd="true"
                        android:src="@drawable/ic_favorite_border"
                        android:tint = "@color/colorIncorrect"/>

                </RelativeLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="1dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight=".6"
                android:gravity="center_vertical"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/first_name_text_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:textSize="16sp"
                    android:text="@string/prompt_first_name"
                    android:maxLines="1" />

                <TextView
                    android:id="@+id/last_name_text_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:textSize="16sp"
                    android:text="@string/prompt_last_name"
                    android:maxLines="1" />

                <TextView
                    android:id="@+id/hometown_text_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:textSize="16sp"
                    android:text="@string/prompt_hometown"
                    android:maxLines="1" />

                <TextView
                    android:id="@+id/birth_date_text_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:textSize="16sp"
                    android:text="@string/prompt_birth_Date"
                    android:maxLines="1" />

            </LinearLayout>

        </LinearLayout>

        <TextView
            android:id="@+id/bio_text_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="5sp"
            android:paddingVertical="3dp"
            android:paddingHorizontal="10dp"
            android:text="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque mattis cursus molestie. Maecenas tempus ex non est aliquam mattis. In molestie ex urna, nec dictum urna commodo vitae. Etiam nibh diam, interdum eleifend sodales quis, tristique eu ligula. In enim turpis, aliquet vitae felis ac, fringilla volutpat sem. Nulla metus arcu, malesuada in lacus ac, cursus rhoncus massa. Praesent sed pharetra ex, at euismod sapien. Nam nec diam mauris. Sed interdum mattis sem id porta."
            android:scrollbars="vertical"/>
    </LinearLayout>



</android.support.constraint.ConstraintLayout>